# knowledge-agent

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  NEO4J_INTEGRATION.md  README.md  SCALING_INTEGRATION.md  VERIFY_AND_EMBEDDING.md  docker-compose.yml  pyproject.toml  requirements-embeddings.txt  requirements-http.txt  requirements-neo4j.txt
.github/workflows/: ci.yml
action_engine/: engine.py  store.py  store_base.py  store_neo4j.py
adapters/: governed_ingest.py  model_map.py
api/: config.py  main.py  schemas.py  services_ask.py  system.py
api/security/: auth.py  rbac.py
common/: models.py
docs/plans/: 2026-06-03-repo-doc-hardening.md
engine/infra/: hnsw.py  stores.py  vector_store.py
engine/ingest/extract/: agent_extractor.py  bge_embedder.py  classifier.py  embedding.py  extractor.py  llm_client.py  verifier.py
engine/ingest/workers/: pipeline.py
engine/retrieval/: retriever.py
engine/retrieval/stages/: recall.py  rerank.py  router.py
frontend/: index.html  wka-client.js
tests/: bench_embedding.py  fake_neo4j.py  test_agent_extractor.py  test_closed_loop.py  test_hardening.py  test_http.py  test_neo4j_parity.py  test_production_config.py  test_verifier.py
